made navbar fixed and fixed z-index issues

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,9 @@
+*{
+    z-index: 9999999;
+}
+
 .Nav {
-    overflow: hidden;
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     width: 100%;
 
@@ -35,8 +38,12 @@ li a {
     border:solid;
     border-color: transparent;
 
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-left: 8px;
+    margin-right: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+
+    z-index: 9999999;
 }
 
 /* li a:hover {
