--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -7,6 +7,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+
+  z-index: 0;
 }
 
 .project-header {
